# spec-mock

./: .gitignore  .rumdl.toml  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  cliff.toml  context7.json
.github/workflows/: ci.yml  release.yml
crates/specmock-core/: Cargo.toml
crates/specmock-core/src/: contract.rs  error.rs  faker.rs  lib.rs  ref_resolver.rs  schema.rs  validate.rs
crates/specmock-runtime/: Cargo.toml
crates/specmock-runtime/src/: lib.rs
crates/specmock-runtime/src/grpc/: mod.rs  protobuf.rs
crates/specmock-runtime/src/http/: mod.rs  negotiate.rs  openapi.rs  proxy.rs  router.rs  ws_handler.rs
crates/specmock-runtime/src/ws/: asyncapi.rs  mod.rs
crates/specmock-runtime/tests/: grpc_protobuf.rs  http_openapi.rs  prism_comparison.rs  ws_asyncapi.rs
crates/specmock-runtime/tests/harness/: comparator.rs  fuzzer.rs  mod.rs  prism.rs  request.rs
crates/specmock-runtime/tests/specs/: asyncapi-chat.yaml  asyncapi-v3-chat.yaml  greeter-streaming.proto  openapi-array-params.yaml  openapi-body-limit.yaml  openapi-callbacks.yaml  openapi-content-types.yaml  openapi-negotiate.yaml  openapi-polymorphic.yaml  openapi-prism-comparison.yaml
crates/specmock-runtime/tests/specs/openapi-multifile/: api.yaml
crates/specmock-runtime/tests/specs/openapi-multifile/schemas/: pet.yaml
crates/specmock-sdk/: Cargo.toml
crates/specmock-sdk/examples/: process_mode.rs  tokio_test_like.rs
crates/specmock-sdk/src/: lib.rs  server.rs
crates/specmock-sdk/tests/: sdk_embed.rs  sdk_process.rs
docs/plans/: 2026-03-01-spec-mock-design.md
docs/specs/: chat.asyncapi.yaml  greeter.proto  pets.openapi.yaml
features/: correctness.feature  dx.feature  security.feature
specs/: README.md  context.md
specs/2026-03-02-01-prism-parity-overhaul/: design.md  tasks.md
specs/2026-03-02-02-prism-comparison-fuzz/: design.md  tasks.md
specs/2026-06-27-01-codebase-quality/: design.md  tasks.md
specs/2026-06-27-01-codebase-quality/features/: performance.feature  tech-debt.feature
