[package]
name = "specmock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonschema = { version = "0.37.4", default-features = false }
rand = { version = "0.10.0", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
rand_regex = "0.19.0"
scc = "3.6.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
serde_yml = "0.0.12"
thiserror = { version = "2.0.18", default-features = false }
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
regex-lite = "0.1.9"
tempfile = "3.26.0"
