[package]
name = "specmock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonschema = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_regex = { workspace = true }
scc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
# Inherit workspace lints but allow expect_used in test code
expect_used = "allow"

[dev-dependencies]
regex-lite = { workspace = true }
tempfile = { workspace = true }
