[package]
name = "specmock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, schema validation, and deterministic data generation for spec-mock"

[dependencies]
jsonschema = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_regex = { workspace = true }
scc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
# Inherit workspace lints but allow expect_used in test code
expect_used = "allow"

[dev-dependencies]
regex-lite = { workspace = true }
tempfile = { workspace = true }
