[package]
name = "specmock-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8.8", features = [
    "ws",
    "json",
    "query",
    "tokio",
    "tracing",
    "http1",
] }
base64 = "0.22.1"
bytes = "1.11.1"
futures-util = "0.3.32"
hpx = "2.3.1"
http = "1.4.0"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1.20", features = [
    "tokio",
    "server-auto",
    "service",
] }
prost = "0.14.3"
prost-reflect = "0.16.3"
protox = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
specmock-core = { version = "0.1.0", path = "../specmock-core" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "signal",
    "time",
] }
tonic = { version = "0.14", default-features = false, features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.44"
url = "2.5.8"

[lints]
workspace = true

[dev-dependencies]
tokio-tungstenite = "0.28.0"
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "transport",
] }
