[package]
name = "specmock-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime servers for HTTP (OpenAPI), WebSocket (AsyncAPI), and gRPC (Protobuf) mocking"

[dependencies]
axum = { workspace = true, features = [
    "ws",
    "json",
    "query",
    "tokio",
    "tracing",
    "http1",
] }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
hpx = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = [
    "tokio",
    "server-auto",
    "service",
] }
prost = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specmock-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "signal",
    "time",
] }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
url = { workspace = true }

[features]
integration-test = []

[lints.clippy]
# Inherit workspace lints but allow expect_used in test code
expect_used = "allow"

[dev-dependencies]
hpx = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde_yml = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true, features = [
    "codegen",
    "transport",
] }
