[package]
name = "specmock-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
specmock-core = { workspace = true }
specmock-runtime = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "process",
    "time",
] }

[lints]
workspace = true

[dev-dependencies]
hpx = { workspace = true }
