[package]
name = "specmock-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust SDK for embedding spec-mock runtime in tests and process mode"

[dependencies]
specmock-core = { workspace = true }
specmock-runtime = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "process",
    "time",
] }

[lints]
workspace = true

[dev-dependencies]
hpx = { workspace = true }
